--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,9 @@ version = "0.1.0"
 authors = ["yanbowen <bowen.yan@gitblit.com>"]
 
 [dependencies]
-chrono = "~0.4.6"
-mio = "~0.6.16"
-log = "~0.4.6"
-simple_logger = "~1.0.1"
-time = "~0.1.40"
-glob = "~0.2"
-os_type = "~2.2.0"
-regex = "~1.0.6"
+chrono = "*"
+os_type = "*"
+regex = "*"
+#foundationdb = "0.2.0"
+#foundationdb-sys = "0.1.1"
+curl = "*"
