--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["yanbowen <bowen.yan@gitblit.com>"]
 chrono = "*"
 os_type = "*"
 regex = "*"
-#foundationdb = "0.2.0"
-#foundationdb-sys = "0.1.1"
+foundationdb = "0.2.0"
+foundationdb-sys = "0.1.1"
 curl = "*"
+serde = "1.0.82"
+serde_json = "1.0.33"
+futures = "*"
