--- a/Settings.toml.example
+++ b/Settings.toml.example
@@ -2,5 +2,12 @@
 home_path = "/root/tinc/"
 pub_key_path = "key/rsa_key.pub"
 
-[geo]
-url = "http://52.25.79.82:10000/geoip_json.php"
+[server]
+#url = "https://127.0.0.1:8443"
+url = "https://10.0.0.5:8080"
+geo_url = "http://52.25.79.82:10000/geoip_json.php"
+
+[client]
+username = "admin"
+password = "123456"
+server_port = "10086"
