--- a/Settings.toml.example
+++ b/Settings.toml.example
@@ -3,11 +3,10 @@ home_path = "/root/tinc/"
 pub_key_path = "key/rsa_key.pub"
 
 [server]
-#url = "https://127.0.0.1:8443"
-url = "https://10.0.0.5:8080"
+url = "https://10.0.0.5:8443"
 geo_url = "http://52.25.79.82:10000/geoip_json.php"
 
 [client]
 username = "admin"
-password = "123456"
+password = "password"
 server_port = "10086"
