--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,22 +18,18 @@ config = "~0.9.1"
 
 bytes = "0.4"
 
-json = "*"
-
 actix = "0.7"
 actix-web = { version = "0.7", features=["ssl"] }
 
-chrono = "*"
-os_type = "*"
-regex = "*"
-curl = "*"
+chrono = "0.4.6"
+os_type = "2.2.0"
+regex = "1.1.0"
+curl = "0.4.19"
 serde = "1.0.82"
 serde_json = "1.0.33"
-serde_derive = ""
-futures = "*"
+serde_derive = "1.0.85"
+futures = "0.1.25"
 
 uuid = "0.7.1"
 rustc-serialize = "0.3.24"
 openssl = "0.10.16"
-
-httparse="1.3.3"
