--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,12 @@ name = "ovrouter"
 [lib]
 name = "ovrouter"
 
+[workspace]
+members = [
+    ".",
+    "ovrouter-gui",
+]
+
 [dependencies]
 log = "0.4.5"
 simple_logger = "1.0.1"
