当连接conductor超时, 进行重新连接

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,13 @@ authors = ["yanbowen <bowen.yan@gitblit.com>"]
 [[bin]]
 name = "ovrouter"
 
-[[bin]]
-name = "setup"
-
 [lib]
 name = "ovrouter"
 
 [workspace]
 members = [
     ".",
+    "setup",
 ]
 
 [dependencies]
