1 将setup与ovrouter拆分成两个workspace,以避免运行setup时需要openssl1.1 2 添加logging.rs 将log内容存放到/var/log/ovr/ovrouter.log 3 添加crate duct,用于start,stop tincd.

--- a/settings.toml.example
+++ b/settings.toml.example
@@ -7,6 +7,8 @@ url = "https://10.0.0.5:8443"
 geo_url = "http://52.25.79.82:10000/geoip_json.php"
 
 [client]
+log_level = "debug"
+log_dir = "/var/log/ovr/"
 username = "admin"
 password = "password"
 server_port = "10086"
