--- a/ovrouter/Cargo.toml
+++ b/ovrouter/Cargo.toml
@@ -27,7 +27,7 @@ chrono = "0.4.6"
 os_type = "2.2.0"
 regex = "1.1.0"
 curl = "0.4.19"
-serde = "1.0.82"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.33"
 serde_derive = "1.0.85"
 futures = "0.1.25"
