--- a/ovrouter-graphql/Cargo.toml
+++ b/ovrouter-graphql/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ovrouter-gui"
+name = "ovrouter-graphql"
 version = "0.1.0"
 authors = ["bowen.yan <bowen.yan@siteview.com>"]
 edition = "2018"
